# hepattn

./: .codecov.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  README.md  codecov.yml  pyproject.toml  todo.md
.github/: renovate.json
.github/workflows/: build.yaml  lint.yaml  test.yaml
data/tide/raw/: hadronic_rois.root
data/trackml/: detectors.csv
setup/: fa3_install.sh  isambard.md
src/hepattn/: flex.py
src/hepattn/callbacks/: __init__.py  attn_mask_logger.py  checkpoint.py  compile.py  gradient_logger.py  inference_timer.py  monitor.py  oldpredwriter.py  param_count_logger.py  prediction_writer.py  predictionwriter.py  predwriter.py  saveconfig.py  target_stats.py  throughput_monitor.py  weight_logger.py
src/hepattn/experiments/cld/: data.py  eval.py  eval_config.yaml  eval_hadrons.yaml  eval_new.py  eval_old.py  eval_other.yaml  eval_test.py  eval_tracking.yaml  event_display.py  main.py  model.py  pdgids.yaml  plot_cleaning.py  plot_costs.py  plot_data.py  plot_event.py  plot_hit_hists.py  plot_particle_hists.py  prep.py  submit_download_eos.sh  submit_prep_rcif.sh  submit_training_hypatia.sh  timing.py
src/hepattn/experiments/cld/configs/: base.yaml  config.yaml  harmonics.yaml  merged.yaml  mtl.yaml  regression.yaml  sihit_ecal.yaml  tight.yaml  tracking.yaml  tracking_vtb.yaml  uncleaned.yaml
src/hepattn/experiments/cld/eval_configs/: eval_other.yaml
src/hepattn/experiments/cld/scripts/: plot_cleaning.py  plot_hit_hists.py  plot_particle_hists.py  plot_timing.py
src/hepattn/experiments/clic/: README.md  __init__.py  lightning_module.py  main.py  metrics.py  pflow_data.py  predictionwriter.py  submit_isambard.sh  submit_training_hypatia.sh  submit_training_sam.sh
src/hepattn/experiments/clic/configs/: base.yaml  clic_var_transform.yaml  pflow.yaml
src/hepattn/experiments/clic/notebooks/: clic_eval_test.ipynb  clic_performance.ipynb  performance.ipynb
src/hepattn/experiments/clic/performance/: cheap_jet.py  helper_dicts.py  jet_helper.py  matching.py  performance.py  plot_helper.py  plot_helper_event.py  plot_helper_particle.py  reader.py  style_sheet.py  substructure_helper.py  utils.py
src/hepattn/experiments/itk/: data.py  eval_filtering.py  filter.py  main.py  model.py  plot_data.py  plot_event.py  prep.py  run_filtering.py  run_tracking.py  submit_download.sh  submit_prep_rcif.sh  submit_training_hypatia.sh  tracker.py
src/hepattn/experiments/itk/configs/: filtering.yaml  filtering_pixel.yaml  filtering_pixel_remove_cat_vars_onehot.yaml  tracking.yaml
src/hepattn/experiments/pflow/: data.py  prep.py
src/hepattn/experiments/pflow/configs/: config.yaml
src/hepattn/experiments/pixel/: data.py  eval.py  main.py  model.py  plot.py  prep.py  submit_training_hypatia.sh
src/hepattn/experiments/pixel/configs/: base.yaml  prep.yaml
src/hepattn/experiments/tide/: data.py  eval.py  eval_tagging.py  main.py  model.py  plot_data.py  plot_roi.py  plots.py  prep.py  submit_prep_rcif.sh  submit_training_hypatia.sh
src/hepattn/experiments/tide/configs/: base.yaml  max.yaml  (+3 more)
src/hepattn/experiments/tracking/: data.py  main.py  submit_hypatia.sh  tracker.py
src/hepattn/experiments/trackml/: README.md  cluster_features.py  data.py  filter.py  hit_filter.py  hit_filter.yaml  main.py  model.py  plot_event.py  plot_kinematics.py  prep.py  run_filtering.py  run_tracking.py  submit.sh  submit_dias.sh  submit_hypatia.sh  submit_training_hypatia.sh  tracker.py  trackml.py
src/hepattn/flex/: __init__.py  fast_local_ca.py  local_ca.py  relative_position.py  sliding_window.py  utils.py
src/hepattn/models/: __init__.py  activation.py  attention.py  decoder.py  dense.py  encoder.py  fitter.py  flex_local_mask.py  hitfilter.py  input.py  loss.py  maskformer.py  maskformer_loss.py  matcher.py  norm.py  pooling.py  posenc.py  posenc_random.py  tagger.py  task.py  transformer.py  wrapper.py
src/hepattn/utils/: array_utils.py  awkward_hdf.py  bert_padding.py  clean_logs.py  cli.py  cuda_timer.py  data.py  eval.py  eval_plots.py  eval_utils.py  fix_yaml.py  flex_utils.py  histogram.py  import_utils.py  local_ca.py  loggers.py  lrsm_dataset.py  masks.py  metrics.py  model_utils.py  plot.py  scaling.py  sorter.py  sorting.py  spherical_harmonics_closed_form.py  spherical_harmonics_generate_basis.py  stats.py  tensor.py  tensor_ndarray_types.py  tensor_utils.py  timing_report.py  types.py  visualise_pes.py
src/hepattn/wrappers/: hitfilter.py
src/lap1015/: README.md
src/lap1015/src/: main.cpp
src/lap1015/src/csrc/: lap.h
src/lap1015/src/lap1015/: __init__.py
src/lap1015/userManual/: userManual.tex
tests/: test_lap1015.py  test_masks.py
tests/experiments/: utils.py
tests/experiments/cld/: test_cld_batch.py  test_cld_coords.py  test_cld_data.py  test_cld_event_displays.py  test_cld_isolation.py  test_cld_kinematics.py  test_data.py  test_kinematics.py  test_pad_to_size.py
tests/experiments/clic/: test_clic.py  test_clic.yaml
tests/experiments/itk/: test_data.py  test_itk_data.py
tests/experiments/tide/: test_plot_roi_vars.py  test_roi_charge.py  test_roi_data.py  test_roi_kinematics.py  test_roi_plot_vars.py
tests/experiments/tracking/: test_trackml.py
tests/experiments/trackml/: test_data.py  test_filtering.py  test_filtering.yaml  test_kinematics.py  test_tracking.py  test_tracking.yaml  test_tracking_old_sort.yaml  test_trackml_data.py  test_trackml_kinematics.py
tests/flex/: test_combined.py  test_fast_local_ca.py  test_flex_basic.py  test_local_ca_flex.py  test_nested.py  test_relative_position.py  test_sliding_window.py
tests/loss/: test_loss.py  test_loss_input_padding.py  test_loss_object_valid.py
tests/matching/: test_costs.py  test_match_equivalence.py  test_matcher.py  test_solvers.py
tests/models/: test_attention.py  test_decoder.py  test_dense.py  test_maskformer_sorting.py  test_matcher.py  test_pooling.py  test_posenc.py  test_task.py  test_transformer.py
tests/utils/: test_array_utils.py  test_local_ca.py  test_lrsm_dataset.py  test_model_utils.py  test_pad_to_size.py
(+35 files in other folders)
