[project]
authors = [{name = "Sam Van Stroud", email = "sam.van.stroud@cern.ch"}]
description = "Attention for High Energy Physics"
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
name = "hepattn"
requires-python = "== 3.12"
version = "0.2.0"

dependencies = [
    "packaging",
    "jupyter",
    "ipykernel",
    "wheel",
    "numpy",
    "scipy",
    "pytest>=8.3.3,<9",
    "pytest-repeat",
    "pytest-cov>=6.0.0,<7",
    "coverage[toml]>=7.0.0,<8",
    "ruff==0.12.4",
    "pre-commit>=4.0.1,<5",
    "matplotlib==3.9.*",
    "lightning==2.5.2",
    "comet-ml==3.50.0",
    "pandas>=2.2.3,<3",
    "pyarrow>=17.0.0",
    "jsonargparse[signatures]==4.40.1",
    "torchjd>=0.5.0",
    "lion-pytorch>=0.2.3,<0.3",
    "awkward>=2.8.1",
    "uproot>=5.6.0",
    "h5py>=3.13.0",
    "particle>=0.25.3",
    "scikit-learn>=1.6.1,<2",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.0",
    "einops>=0.8.1,<0.9",
]

[dependency-groups]
clic = ["pathos", "vector", "fastjet", "atlas-ftag-tools", "energyflow"] # has problems on isambard
tide = ["numba>=0.61.2"] # has problems on isambard
fa2 = ["flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.4.post1/flash_attn-2.7.4.post1+cu12torch2.6cxx11abiTRUE-cp312-cp312-linux_x86_64.whl",]

[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["src/hepattn", "src/lap1015/src/lap1015"]


[tool.pixi.project]
channels = ["conda-forge", "nvidia", "nodefaults"]
platforms = ["linux-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
hepattn = { path = ".", editable = true }

[tool.pixi.pypi-options]
no-build-isolation = ["flash-attn"]
extra-index-urls = ["https://download.pytorch.org/whl/cu128"]

[tool.pixi.feature.gpu.pypi-dependencies]
torch = { version = "==2.7.1", index = "https://download.pytorch.org/whl/cu128"}

[tool.pixi.feature.cpu.pypi-dependencies]
torch = { version = "==2.7.1", index = "https://download.pytorch.org/whl/cpu" }

[tool.pixi.environments]
default = { features = ["gpu", "fa2"] }
isambard = { features = ["gpu"] }
cpu = { features = ["cpu"] }
clic = { features = ["clic"] }
tide = { features = ["tide"] }
ci = { features = ["cpu", "clic", "tide"]}

[tool.pixi.system-requirements]
libc = "2.28"
cuda = "12.3"

[tool.pixi.dependencies]
gxx = "*"
git = "*"
git-lfs = ">=3.6.1,<4"
cuda = "12.8.*"
ninja = "*"

[tool.pixi.tasks.test]
cmd = "pytest"

[tool.pixi.tasks.test-ci]
cmd = "pytest -m 'not gpu and not requiresdata' --cov=src --cov-report=xml --cov-report=term-missing"


[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 150
preview = true
#format.skip-magic-trailing-comma = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["G", "D100", "D101", "D102", "D103",  "D104", "D105", "D106", "D107", "D205", "ANN", "PLW", "FBT", "EM",  "PLR2004", "PT018", "COM812", "CPY001", "TRY003", "S101", "N812", "PLR0913", "PLR0917", "DOC201", "INP001", "PLR6301", "T201", "TD002", "TD003", "FIX002", "ARG002", "C901", "PLR0914", "PLR0912", "PLR0915", "PT011", "ERA001", "PGH004", "PLC0206", "S311", "PLR0911", "PLR6104", "S404", "S603", "B028"]
#isort.split-on-trailing-comma=false
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E501"]

[tool.pytest.ini_options]
filterwarnings = ["ignore:.*distutils Version classes are deprecated. Use packaging.version instead.*:DeprecationWarning"]
markers = ["gpu: mark test to run on GPU", "requiresdata: mark test that requires data not present in the repository"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/lap1015/*",
    "*/experiments/*",
    "*.ipynb"
]

[tool.coverage.report]
exclude_lines = [
    "raise AssertionError",
    "raise NotImplementedError",
]
